fix(controllers): fix controllers with new changes in daos
